# aura_agent

./: Cargo.toml  README.md  aura-agent.service  aura-xserver.service  aura_actions.sh  network_nomad.sh  update.sh
shaders/: earth_globe.fs  earth_globe.vs  kawase_down.fs  kawase_up.fs  orb_sdf.fs  orb_sdf.vs  particle_compute.glsl  particle_fragment.glsl  particle_vertex.glsl  tonemap.fs  trail_ribbon.fs  trail_ribbon.vs
src/: main.rs
src/ai/: mod.rs  prompt.rs  tools.rs
src/core/: mod.rs
src/ecs/: components.rs  flow_field.rs  gpu_particles.rs  kawase_bloom.rs  mod.rs  sdf_renderer.rs  spatial_hash.rs  spectral_fft.rs  steering.rs
src/fx/: atmosphere.rs  celestial.rs  easing.rs  globe.rs  mod.rs  noise.rs  orb.rs  spectral.rs  starfield.rs  synapse.rs  weather.rs
src/telemetry/: mod.rs
src/ui/: alert.rs
tools/: llm_call.py  requirements.txt  visualize.py
