[package]
name = "aura_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
raylib = "5.5"
ollama-rs = { version = "0.3.4", features = ["stream", "macros"] }
tokio = { version = "1.52", features = ["full"] }
tokio-stream = "0.1"
sysinfo = "0.31"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "socks"] }